# scout

detectors/index-in-result/: Cargo.toml
detectors/index-in-result/src/: lib.rs
detectors/unwrap-or-expect-in-result/: Cargo.toml
detectors/unwrap-or-expect-in-result/src/: lib.rs
